Overhaul structure to prevent image stretching
This uses inline styling for backgrounds, as adapted from the following:
http://stackoverflow.com/a/18839446

--- a/assets/stylesheets/components/_gallery.scss
+++ b/assets/stylesheets/components/_gallery.scss
@@ -1,15 +1,21 @@
-.photo-gallery, .photo-gallery li {
+.photo-gallery {
 	list-style: none;
 	padding: 0;
-}
-
-.photo-gallery li {
-	display: inline-block;
-	width: 25%;
-}
-
-.photo-gallery li img {
-	width: 100%;
-  height: 150px;
-  overflow: hidden;
+  li {
+    height: 150px;
+    overflow: hidden;
+    vertical-align: top;
+    background-size:cover;
+    background-position:50% 50%;
+    display: inline-block;
+    width: 32%;
+    img{
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      /* OLD IE */
+      zoom: 1;
+      filter: alpha(opacity=0);
+    }
+  }
 }
